<resources>

    <string name="app_name">IO IAM Test</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="main_button_crash">Crash!</string>
    <string name="disable_wlan">Disable WLan</string>
    <string name="enable_wlan">Enable WLan</string>
    <string name="select_image">Select image</string>
    <string name="toggle_ids">Activate tracking of IDs androidId, mac address and IMEI (open web views twice to see effect)</string>
    <string name="select_eventtype_to_log">Select EventType to log</string>
    <string name="start_background_process">Start Background Process</string>
    <string name="end_background_process">End Background Process</string>
    <string name="quittin_background_process">Quitting</string>
    <string name="private_event_ext">(private)</string>
    <string name="manual_webview_titleprefix">"Manual WebView: "</string>
    <string name="hybrid_webview_titleprefix">"Hybrid WebView: "</string>
    <string name="open_manual_webview_button_text">Manual WebView Test</string>
    <string name="open_hybrid_webview_button_text">Hybrid WebView Test</string>
    <string name="customerdata_edittext_hint">Customer Data</string>
    <string name="category_edittext_hint">Event Category</string>
    <string name="comment_edittext_hint">Event Comment</string>
    <string name="log_selected_event_button">Log selected Event</string>

</resources>